Closed Bug 1078327 Opened 11 years ago Closed 11 years ago

FF needs correct check PointerCapture for correct firing pointerover/pointerout events

Categories

(Core :: General, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla36

People

(Reporter: alessarik, Assigned: alessarik)

References

Details

Attachments

(2 files, 1 obsolete file)

User Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 Build ID: 20140825202822 Steps to reproduce: If users want set pointer capture on element, which contain another elements, FF should correct detecting cases for firing pointerover/pointerout events. Actual results: If pointer crosses boundaries of internal elements, pointerout event was fired at element which have pointercapture. Expected results: pointerout event should be fired only in case if pointer crosses external boundaries of capturing content.
Blocks: 1042108
OS: Windows 8 → All
Hardware: x86_64 → All
+ Add correct checking for detect elements with contents
Attachment #8500505 - Flags: review?(bugs)
Attachment #8500505 - Flags: feedback?(mbrubeck)
Comment on attachment 8500505 [details] [diff] [review] check_capturing_content_ver1.diff We need a test for this.
Attachment #8500505 - Flags: review?(bugs) → review+
Status: UNCONFIRMED → NEW
Component: Untriaged → General
Ever confirmed: true
Product: Firefox → Core
(In reply to Olli Pettay [:smaug] from comment #2) > We need a test for this. I will try, but I am very doubt that I can provide auto test.
+ Test for correct detecting capturing content
Attachment #8501675 - Flags: review?(bugs)
Attachment #8501675 - Flags: feedback?(mbrubeck)
I see failures on try.
Comment on attachment 8501675 [details] [diff] [review] check_capturing_content_test_ver1.diff Please fix the failures.
Attachment #8501675 - Flags: review?(bugs)
Attachment #8501675 - Flags: review-
Attachment #8501675 - Flags: feedback?(mbrubeck)
Attachment #8500505 - Flags: feedback?(mbrubeck) → feedback+
+ Changes: Add correct finish for test
Attachment #8501675 - Attachment is obsolete: true
Attachment #8506693 - Flags: review?(bugs)
Attachment #8506693 - Flags: feedback?(mbrubeck)
Attachment #8506693 - Flags: review?(bugs) → review+
If nobody have objections, I put checkin flag.
Keywords: checkin-needed
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
Attachment #8506693 - Flags: feedback?(mbrubeck)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: