Bug 1078327 - Add check for correct detecting capturing content. r=smaug